// Copyright 2013 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package ash.attestation;

message AttestationKeyPayload {
  // Whether the key's certificate has been uploaded.  This is used for
  // Enterprise Machine Keys to determine if the certificate has been uploaded
  // to DMServer.
  optional bool is_certificate_uploaded = 1;
}
